add content to home page

--- a/src/main/webapp/app/home/home.html
+++ b/src/main/webapp/app/home/home.html
@@ -40,11 +40,10 @@
                     <span class="card-title text-green text-darken-3">Badges</span>
                 </div>
                 <div class="card-content">
-                    <p>I am a very simple card. I am good at containing small bits of information.
-                        I am convenient because I require little markup to use effectively.</p>
+                    <p>Do you have a Badge Nominee? Do you want to see who have recently received Badges? How are you ranking? Take a look!</p>
                 </div>
                 <div class="card-action">
-                    <a href="http://pernix-police.herokuapp.com/badge_nominations">Llevame!</a>
+                    <a href="http://pernix-police.herokuapp.com/badge_nominations">Click me!</a>
                 </div>
             </div>
         </div>
@@ -55,11 +54,10 @@
                     <span class="card-title">Gamification</span>
                 </div>
                 <div class="card-content">
-                    <p>I am a very simple card. I am good at containing small bits of information.
-                        I am convenient because I require little markup to use effectively.</p>
+                    <p>Because work needs also to be fun. Check your points, the different activities. Be promoted at the company and contribute with us to a better culture and climate at Pernix</p>
                 </div>
                 <div class="card-action">
-                    <a href="https://docs.google.com/spreadsheets/d/1u2bBPtjUmtjhlasj3oYlPCL6Euw0Vm3wbhKLhDIkjXY/edit#gid=0">Llevame!</a>
+                    <a href="https://docs.google.com/spreadsheets/d/1u2bBPtjUmtjhlasj3oYlPCL6Euw0Vm3wbhKLhDIkjXY/edit#gid=0">Click me!</a>
                 </div>
             </div>
         </div>
@@ -70,11 +68,10 @@
                     <span class="card-title">Newsletter</span>
                 </div>
                 <div class="card-content">
-                    <p>I am a very simple card. I am good at containing small bits of information.
-                        I am convenient because I require little markup to use effectively.</p>
+                    <p>Keep in touch with the recent news and projects at our office, and find interesting articles worthy of a minute or two of your time.<p/>
                 </div>
                 <div class="card-action">
-                    <a href="https://pernixnewsletter.wordpress.com/">Llevame!</a>
+                    <a href="https://pernixnewsletter.wordpress.com/">Click me!</a>
                 </div>
             </div>
         </div>
@@ -85,11 +82,66 @@
                     <span class="card-title">Playbook</span>
                 </div>
                 <div class="card-content">
-                    <p>I am a very simple card. I am good at containing small bits of information.
-                        I am convenient because I require little markup to use effectively.</p>
+                    <p>Are you having doubts about our processes? Don't know what to do? Fearful about the unknown rules? Well, take a look at the #playbook</p>
                 </div>
                 <div class="card-action">
-                    <a href="https://docs.google.com/a/pernix-solutions.com/document/d/1SmhI-yReqQWRp2pIe4V6QQv0-py4PvkKr5xS8yxewiI/edit?usp=drive_web">Llevame!</a>
+                    <a href="https://docs.google.com/a/pernix-solutions.com/document/d/1SmhI-yReqQWRp2pIe4V6QQv0-py4PvkKr5xS8yxewiI/edit?usp=drive_web">Click me!</a>
+                </div>
+            </div>
+        </div>
+        <div class="col s3">
+            <div class="card">
+                <div class="card-image">
+                    <img src="/content/images/card1.jpg">
+                    <span class="card-title text-green text-darken-3">KPI</span>
+                </div>
+                <div class="card-content">
+                    <p>Check your monthly progress with our KPI followups and NPS measurements.</p>
+                </div>
+                <div class="card-action">
+                    <a href="#">Llevame!</a>
+                </div>
+            </div>
+        </div>
+        <div class="col s3">
+            <div class="card">
+                <div class="card-image">
+                    <img src="/content/images/card3.png">
+                    <span class="card-title text-green text-darken-3">Apprentice Program</span>
+                </div>
+                <div class="card-content">
+                    <p>A space for New Apprentices and Mentors. Check material and information that will help you succeed through the process of our apprentice program.</p>
+                </div>
+                <div class="card-action">
+                    <a href="#">Llevame!</a>
+                </div>
+            </div>
+        </div>
+        <div class="col s3">
+            <div class="card">
+                <div class="card-image">
+                    <img src="/content/images/card2.jpg">
+                    <span class="card-title text-green text-darken-3">Pernix LABS</span>
+                </div>
+                <div class="card-content">
+                    <p>Let’s Keep information flowing! Take a look at our LABS Projects.</p>
+                </div>
+                <div class="card-action">
+                    <a href="https://labs.pernix-solutions.com/#/">Click me!</a>
+                </div>
+            </div>
+        </div>
+        <div class="col s3">
+            <div class="card">
+                <div class="card-image">
+                    <img src="/content/images/card4.jpg">
+                    <span class="card-title text-green text-darken-3">Clubs</span>
+                </div>
+                <div class="card-content">
+                    <p>Check what activities our clubs are being a part of. Join them!</p>
+                </div>
+                <div class="card-action">
+                    <a href="#">Llevame!</a>
                 </div>
             </div>
         </div>
