--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -10,8 +10,7 @@
     <!-- build:css content/css/vendor.css -->
     <!-- bower:css -->
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
-    <link rel="stylesheet" href="bower_components/Materialize/dist/css/materialize.css">
-
+    <link rel="stylesheet" href="bower_components/Materialize/bin/materialize.css">
     <link rel="stylesheet" href="bower_components/angular-loading-bar/build/loading-bar.css">
     <!-- endinject -->
     <!-- endbuild -->
@@ -32,8 +31,8 @@
             <!-- Angular views -->
         </div>
 
-        <div class="footer" ng-cloak>
-            <p>This is your footer</p>
+        <div class="footer center-align" ng-cloak>
+            <p>Pernix Solutions 2016 &copy;</p>
         </div>
     </div>
 
@@ -52,6 +51,7 @@
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/json3/lib/json3.js"></script>
     <script src="bower_components/messageformat/messageformat.js"></script>
+    <script src="bower_components/Materialize/bin/materialize.js"></script>
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/angular-aria/angular-aria.js"></script>
     <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
@@ -65,8 +65,6 @@
     <script src="bower_components/bootstrap-ui-datetime-picker/dist/datetime-picker.js"></script>
     <script src="bower_components/ng-file-upload/ng-file-upload.js"></script>
     <script src="bower_components/ngInfiniteScroll/build/ng-infinite-scroll.js"></script>
-    <script src="bower_components/Materialize/dist/js/materialize.min.js"></script>
-
     <!-- endinject -->
     <!-- endbuild -->
 
