fix text to make it pretty

--- a/src/main/webapp/app/home/home.html
+++ b/src/main/webapp/app/home/home.html
@@ -110,7 +110,7 @@
                     <span class="card-title text-green text-darken-3">Apprentice Program</span>
                 </div>
                 <div class="card-content">
-                    <p>A space for New Apprentices and Mentors. Check material and information that will help you succeed through the process of our apprentice program.</p>
+                    <p>A space for New Apprentices and Mentors. Check out the material and succeed through the apprentice program.</p>
                 </div>
                 <div class="card-action">
                     <a href="#">Llevame!</a>
