--- a/src/main/webapp/app/home/home.html
+++ b/src/main/webapp/app/home/home.html
@@ -138,7 +138,7 @@
                     <span class="card-title text-green text-darken-3">Clubs</span>
                 </div>
                 <div class="card-content">
-                    <p>Check what activities our clubs are being a part of and join them!</p>
+                    <p>Check out what activities our clubs are being part of and join them!</p>
                 </div>
                 <div class="card-action">
                     <a href="#">Llevame!</a>
