--- a/src/main/webapp/app/home/home.html
+++ b/src/main/webapp/app/home/home.html
@@ -119,8 +119,12 @@
                 <div class="card-image waves-effect waves-block waves-light">
                     <img class="activator" src="/content/images/card6.jpg">
                 </div>
+                <div class="card-content">
+                    <span class="card-title activator grey-text text-darken-4">Training Program<i class="material-icons right">more_vert</i></span>
+                    <p><a href="https://labs.pernix-solutions.com/#/" class="accent">Click me!</a></p>
+                </div>
                 <div class="card-reveal">
-                    <span class="card-title grey-text text-darken-4">Trainning Program<i class="material-icons right">close</i></span>
+                    <span class="card-title grey-text text-darken-4">Training Program<i class="material-icons right">close</i></span>
                     <p>A space for New Apprentices and Mentors. Check material and information that will help you succeed through the process of our apprentice program.</p>
                     <p><a href="http://dev.pernix-solutions.com/pernixacademy/moodle/" class="accent">Click me!</a></p>
                 </div>
@@ -147,10 +151,14 @@
                 <div class="card-image waves-effect waves-block waves-light">
                     <img class="activator" src="/content/images/card8.jpg">
                 </div>
+                <div class="card-content">
+                    <span class="card-title activator grey-text text-darken-4">Clubs<i class="material-icons right">more_vert</i></span>
+                    <p><a href="https://labs.pernix-solutions.com/#/" class="accent">Click me!</a></p>
+                </div>
                 <div class="card-reveal">
                     <span class="card-title grey-text text-darken-4">Clubs<i class="material-icons right">close</i></span>
                     <p>Check what activities our clubs are being a part of. Join them!</p>
-                    <p><a href="#" class="accent">Click me!</a></p>
+                    <p><a href="https://labs.pernix-solutions.com/#/" class="accent">Click me!</a></p>
                 </div>
             </div>
         </div>
