Gamification entities added

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -105,6 +105,18 @@
     <script src="app/entities/productivity/productivity.state.js"></script>
     <script src="app/entities/productivity/productivity.service.js"></script>
     <script src="app/entities/productivity/productivity.controller.js"></script>
+    <script src="app/entities/participation/participation-dialog.controller.js"></script>
+    <script src="app/entities/participation/participation-detail.controller.js"></script>
+    <script src="app/entities/participation/participation-delete-dialog.controller.js"></script>
+    <script src="app/entities/participation/participation.state.js"></script>
+    <script src="app/entities/participation/participation.service.js"></script>
+    <script src="app/entities/participation/participation.controller.js"></script>
+    <script src="app/entities/participant/participant-dialog.controller.js"></script>
+    <script src="app/entities/participant/participant-detail.controller.js"></script>
+    <script src="app/entities/participant/participant-delete-dialog.controller.js"></script>
+    <script src="app/entities/participant/participant.state.js"></script>
+    <script src="app/entities/participant/participant.service.js"></script>
+    <script src="app/entities/participant/participant.controller.js"></script>
     <script src="app/entities/k-pi/k-pi-dialog.controller.js"></script>
     <script src="app/entities/k-pi/k-pi-detail.controller.js"></script>
     <script src="app/entities/k-pi/k-pi-delete-dialog.controller.js"></script>
@@ -154,6 +166,12 @@
     <script src="app/entities/category/category.state.js"></script>
     <script src="app/entities/category/category.service.js"></script>
     <script src="app/entities/category/category.controller.js"></script>
+    <script src="app/entities/activity/activity-dialog.controller.js"></script>
+    <script src="app/entities/activity/activity-detail.controller.js"></script>
+    <script src="app/entities/activity/activity-delete-dialog.controller.js"></script>
+    <script src="app/entities/activity/activity.state.js"></script>
+    <script src="app/entities/activity/activity.service.js"></script>
+    <script src="app/entities/activity/activity.controller.js"></script>
     <script src="app/components/util/truncate-words.filter.js"></script>
     <script src="app/components/util/truncate-characters.filter.js"></script>
     <script src="app/components/util/sort-by.directive.js"></script>
