--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -93,6 +93,8 @@
     <script src="app/layouts/error/error.state.js"></script>
     <script src="app/home/home.state.js"></script>
     <script src="app/home/home.controller.js"></script>
+    <script src="app/gamification/gamification.state.js"></script>
+    <script src="app/gamification/gamification.controller.js"></script>
     <script src="app/entities/participation/participation-dialog.controller.js"></script>
     <script src="app/entities/participation/participation-detail.controller.js"></script>
     <script src="app/entities/participation/participation-delete-dialog.controller.js"></script>
