--- a/src/main/webapp/app/entities/employee/employee-detail.html
+++ b/src/main/webapp/app/entities/employee/employee-detail.html
@@ -16,6 +16,10 @@
         <dd>
             <span>{{vm.employee.role}}</span>
         </dd>
+        <dt><span>Active</span></dt>
+        <dd>
+            <span>{{vm.employee.active}}</span>
+        </dd>
     </dl>
 
     <button type="submit"
