--- a/src/main/webapp/app/entities/employee/employee-dialog.html
+++ b/src/main/webapp/app/entities/employee/employee-dialog.html
@@ -31,6 +31,10 @@
                     ng-model="vm.employee.role"
                      />
         </div>
+        <div class="form-group">
+            <label class="control-label" for="field_active">Active</label>
+            <input type="checkbox" class="checkbox-control" name="role" id="field_active" ng-model="vm.employee.active" />
+        </div>
 
     </div>
     <div class="modal-footer">
