--- a/src/main/webapp/app/entities/participation/participation-dialog.html
+++ b/src/main/webapp/app/entities/participation/participation-dialog.html
@@ -26,7 +26,7 @@
 
         <div class="form-group">
             <label for="field_employee">Employee</label>
-            <select class="form-control" id="field_employee" name="employee" ng-model="vm.participation.employee" ng-options="employee as employee.name for employee in vm.employees track by employee.id">
+            <select class="form-control" id="field_employee" name="employee" ng-model="vm.participation.employee" ng-options="employee as employee.name for employee in (vm.employees | filter:{ active : true }) track by employee.id">
                 <option value=""></option>
             </select>
         </div>
