--- a/src/main/webapp/app/entities/participation/participations.html
+++ b/src/main/webapp/app/entities/participation/participations.html
@@ -26,7 +26,7 @@
                 </tr>
             </thead>
             <tbody>
-                <tr ng-repeat="participation in vm.participations track by participation.id">
+                <tr ng-repeat="participation in vm.participations track by participation.id"  ng-if="participation.employee.active">
                     <td><a ui-sref="participation-detail({id:participation.id})">{{participation.id}}</a></td>
                         <td>{{participation.date | date:'mediumDate'}}</td>
                     <td>
