Deleted employee entity

--- a/src/main/webapp/app/entities/activity/activities.html
+++ b/src/main/webapp/app/entities/activity/activities.html
@@ -33,7 +33,7 @@
                     <td>{{activity.description}}</td>
                     <td>{{activity.points}}</td>
                     <td>
-                        <a ui-sref="employee-detail({id:activity.coordinator.id})">{{activity.coordinator.name}}</a>
+                        {{activity.coordinator.firstName}}
                     </td>
                     <td class="text-right">
                         <div class="btn-group flex-btn-group-container">
