--- a/src/main/webapp/app/entities/activity/activity-detail.html
+++ b/src/main/webapp/app/entities/activity/activity-detail.html
@@ -18,7 +18,7 @@
         </dd>
         <dt><span>Coordinator</span></dt>
         <dd>
-            <a ui-sref="employee-detail({id:vm.activity.coordinator.id})">{{vm.activity.coordinator.name}}</a>
+            {{vm.activity.coordinator.firstName}}
         </dd>
     </dl>
 
