--- a/src/main/webapp/app/admin/user-management/user-management-dialog.html
+++ b/src/main/webapp/app/admin/user-management/user-management-dialog.html
@@ -82,14 +82,14 @@
         </div>
         <div class="form-group">
             <label for="activated">
-                <input ng-disabled="vm.user.id === null" type="checkbox" id="activated" ng-model="vm.user.activated">
+                <input ng-disabled="vm.user.id === null" type="checkbox" id="activated" ng-model="vm.user.activated" class="checkbox-control">
                 <span>Activated</span>
             </label>
         </div>
 
         <div class="form-group">
             <label>Profiles</label>
-            <select class="form-control" multiple name="authority" ng-model="vm.user.authorities"
+            <select class="form-control" name="authority" ng-model="vm.user.authorities"
                     ng-options="authority for authority in vm.authorities">
             </select>
         </div>
