--- a/src/main/webapp/app/entities/participation/participation-dialog.html
+++ b/src/main/webapp/app/entities/participation/participation-dialog.html
@@ -25,14 +25,14 @@
         </div>
 
         <div class="form-group">
-            <label for="field_employee">Employee</label>
-            <select class="form-control" id="field_employee" name="employee" ng-model="vm.participation.employee" ng-options="employee as employee.name for employee in (vm.employees | filter:{ active : true }) track by employee.id">
+            <label for="field_activity">Activity</label>
+            <select class="form-control" id="field_activity" name="activity" ng-model="vm.participation.activity" ng-options="activity as activity.name for activity in vm.activities track by activity.id">
                 <option value=""></option>
             </select>
         </div>
         <div class="form-group">
-            <label for="field_activity">Activity</label>
-            <select class="form-control" id="field_activity" name="activity" ng-model="vm.participation.activity" ng-options="activity as activity.name for activity in vm.activities track by activity.id">
+            <label for="field_user">User</label>
+            <select class="form-control" id="field_user" name="user" ng-model="vm.participation.user" ng-options="user as user.firstName for user in vm.users track by user.id">
                 <option value=""></option>
             </select>
         </div>
