--- a/src/main/webapp/app/entities/participation/participations.html
+++ b/src/main/webapp/app/entities/participation/participations.html
@@ -20,20 +20,20 @@
                 <tr>
                     <th><span>ID</span></th>
                     <th><span>Date</span></th>
-                    <th><span>Employee</span></th>
                     <th><span>Activity</span></th>
+                    <th><span>User</span></th>
                     <th></th>
                 </tr>
             </thead>
             <tbody>
-                <tr ng-repeat="participation in vm.participations track by participation.id"  ng-if="participation.employee.active">
+                <tr ng-repeat="participation in vm.participations track by participation.id">
                     <td><a ui-sref="participation-detail({id:participation.id})">{{participation.id}}</a></td>
                         <td>{{participation.date | date:'mediumDate'}}</td>
                     <td>
-                        <a ui-sref="employee-detail({id:participation.employee.id})">{{participation.employee.name}}</a>
+                        <a ui-sref="activity-detail({id:participation.activity.id})">{{participation.activity.name}}</a>
                     </td>
                     <td>
-                        <a ui-sref="activity-detail({id:participation.activity.id})">{{participation.activity.name}}</a>
+                        {{participation.user.firstName}}
                     </td>
                     <td class="text-right">
                         <div class="btn-group flex-btn-group-container">
