--- a/src/main/webapp/app/admin/user-management/user-management-dialog.html
+++ b/src/main/webapp/app/admin/user-management/user-management-dialog.html
@@ -89,7 +89,7 @@
 
         <div class="form-group">
             <label>Profiles</label>
-            <select class="form-control" name="authority" ng-model="vm.user.authorities"
+            <select class="form-control" name="authority" multiple ng-model="vm.user.authorities"
                     ng-options="authority for authority in vm.authorities">
             </select>
         </div>
