--- a/src/main/webapp/app/entities/activity/activities.html
+++ b/src/main/webapp/app/entities/activity/activities.html
@@ -32,9 +32,7 @@
                     <td>{{activity.name}}</td>
                     <td>{{activity.description}}</td>
                     <td>{{activity.points}}</td>
-                    <td>
-                        {{activity.coordinator.firstName}}
-                    </td>
+                    <td>{{activity.coordinator.firstName}}</td>
                     <td class="text-right">
                         <div class="btn-group flex-btn-group-container">
                             <button type="submit"
