--- a/src/main/webapp/app/entities/participation/participation-dialog.html
+++ b/src/main/webapp/app/entities/participation/participation-dialog.html
@@ -26,13 +26,13 @@
 
         <div class="form-group">
             <label for="field_activity">Activity</label>
-            <select class="form-control" id="field_activity" name="activity" ng-model="vm.participation.activity" ng-options="activity as activity.name for activity in vm.activities track by activity.id">
+            <select class="form-control" id="field_activity" name="activity" ng-model="vm.participation.activity" ng-options="activity as activity.name for activity in vm.activities | filter: vm.currentAccount.email ">
                 <option value=""></option>
             </select>
         </div>
         <div class="form-group">
             <label for="field_user">User</label>
-            <select class="form-control" id="field_user" name="user" ng-model="vm.participation.user" ng-options="user as user.firstName for user in vm.users track by user.id">
+            <select class="form-control" id="field_user" name="user" ng-model="vm.participation.user" ng-options="user as user.firstName for user in vm.users | filter: '!ROLE_ADMIN'">
                 <option value=""></option>
             </select>
         </div>
@@ -45,4 +45,24 @@
             <span class="glyphicon glyphicon-save"></span>&nbsp;<span>Save</span>
         </button>
     </div>
+
+    <div class="table-responsive">
+        <table class="table table-striped">
+            <thead>
+            <tr>
+
+                <th>Activities</th>
+
+            </tr>
+            </thead>
+            <tbody>
+            <tr ng-repeat="activity in vm.activities">
+
+                <td>
+                    <span class="label label-info">{{vm.currentAccount.id}}</span>
+                </td>
+            </tr>
+            </tbody>
+        </table>
+
 </form>
