--- a/src/main/webapp/app/home/home.html
+++ b/src/main/webapp/app/home/home.html
@@ -56,12 +56,12 @@
                 </div>
                 <div class="card-content">
                     <span class="card-title activator grey-text text-darken-4">Gamification<i class="material-icons right">more_vert</i></span>
-                    <p><a ui-sref="gamification">Click me!</a></p>
+                    <p><a ui-sref="gamification()">Click me!</a></p>
                 </div>
                 <div class="card-reveal">
                     <span class="card-title grey-text text-darken-4">Gamification<i class="material-icons right">close</i></span>
                     <p>Because work needs also to be fun. Check your points, the different activities. Be promoted at the company and contribute with us to a better culture and climate at Pernix</p>
-                    <p><a ui-sref="gamification">Click me!</a></p>
+                    <p><a ui-sref="gamification()">Click me!</a></p>
                 </div>
             </div>
         </div>
