Delete multiple participations

--- a/src/main/webapp/app/admin/user-management/user-management-dialog.html
+++ b/src/main/webapp/app/admin/user-management/user-management-dialog.html
@@ -95,7 +95,7 @@
         </div>
     </div>
     <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="vm.clear()">
+        <button type="button" class="btn btn-info" data-dismiss="modal" ng-click="vm.clear()">
             <span class="glyphicon glyphicon-ban-circle"></span>&nbsp;<span
            >Cancel</span>
         </button>
