--- a/src/main/webapp/app/admin/user-management/user-management-delete-dialog.html
+++ b/src/main/webapp/app/admin/user-management/user-management-delete-dialog.html
@@ -9,7 +9,7 @@
         <p>Are you sure you want to delete this User?</p>
     </div>
     <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="vm.clear()">
+        <button type="button" class="btn btn-info" data-dismiss="modal" ng-click="vm.clear()">
             <span class="glyphicon glyphicon-ban-circle"></span>&nbsp;<span>Cancel</span>
         </button>
         <button type="submit" ng-disabled="deleteForm.$invalid" class="btn btn-danger">
