--- a/src/main/webapp/app/entities/participation/participation-delete-dialog.html
+++ b/src/main/webapp/app/entities/participation/participation-delete-dialog.html
@@ -1,4 +1,4 @@
-<form name="deleteForm" ng-submit="vm.confirmDelete(vm.participation.id)">
+<form name="deleteForm" ng-submit="vm.confirmDelete(vm.participationId)">
     <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true"
                 ng-click="vm.clear()">&times;</button>
@@ -9,7 +9,7 @@
         <p>Are you sure you want to delete this Participation?</p>
     </div>
     <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="vm.clear()">
+        <button type="button" class="btn btn-info" data-dismiss="modal" ng-click="vm.clear()">
             <span class="glyphicon glyphicon-ban-circle"></span>&nbsp;<span>Cancel</span>
         </button>
         <button type="submit" ng-disabled="deleteForm.$invalid" class="btn btn-danger">
